se agregó cursor tipo hand en varios botones